# macspu-accel-rs

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
examples/: probe.rs
src/: iokit.c  lib.rs  sensor_spu.rs
